# cloud-hypervisor

./: Cargo.toml
arch/: Cargo.toml
devices/: Cargo.toml
pci/: Cargo.toml
src/: main.rs
vhost/: Cargo.toml
vhost/src/vhost_user/: .message.rs.swp  connection.rs  master.rs  message.rs  sock_ctrl_msg.rs
vhost_rs/src/vhost_user/: connection.rs  master.rs
vhost_user_backend/src/: lib.rs
vm-allocator/: Cargo.toml
vm-virtio/: Cargo.toml
vm-virtio/src/: block.rs  console.rs  device.rs  fs.rs  lib.rs  net.rs  pmem.rs  rng.rs
vm-virtio/src/vhost_user/: blk.rs  handler.rs  mod.rs  net.rs
vmm/: Cargo.toml
vmm/src/: config.rs  vm.rs
