[package]
name = "devices"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[dependencies]
byteorder = ">=1.2.1"
epoll = "=4.0.1"
libc = ">=0.2.39"
vmm-sys-util = { git = "https://github.com/rust-vmm/vmm-sys-util" }

[dev-dependencies]
tempfile = ">=3.0.2"

[dependencies.vm-memory]
git = "https://github.com/sboeuf/vm-memory"
branch = "add_fd_support"
features = ["backend-mmap"]

