[package]
name = "pci"
version = "0.1.0"
authors = ["Samuel Ortiz <sameo@linux.intel.com>"]
edition = "2018"

[dependencies]
vm-allocator = { path = "../vm-allocator" }
byteorder = "*"
devices = { path = "../devices" }
kvm-bindings = "0.1"
kvm-ioctls = { git = "https://github.com/rust-vmm/kvm-ioctls", branch = "master" }
libc = ">=0.2.39"
log = "*"
vmm-sys-util = { git = "https://github.com/rust-vmm/vmm-sys-util" }

[dependencies.vm-memory]
git = "https://github.com/sboeuf/vm-memory"
branch = "add_fd_support"
features = ["backend-mmap"]

